[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "timed-cache"
version = "0.1.0"
description = "Thread-safe in-memory cache with TTL and stale-while-revalidate refresh."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["timed_cache"]

[tool.pytest.ini_options]
addopts = "--cov=timed_cache --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["timed_cache"]

[tool.coverage.report]
show_missing = true
skip_covered = false
